<resources>
    <string name="app_name">Paws Time</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="toolbar_home">Home</string>
    <string name="view_profile">View Profile</string>
    <string name="toolbar_profile">Profile</string>
    <string name="reminders">Reminders</string>
    <string name="toolbar_reminders">Reminders</string>
    <string name="pet_description">Pet Description</string>
    <string name="care_instructions">Special Care Instructions</string>
    <string name="medical_info">Medical Info</string>
    <string name="preferred_vet">Preferred vet</string>
    <string name="emergency_contact_info">Emergency Contact Info</string>
    <string name="new_reminder_title">Create new Reminder</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="export_pet_details">Export Details</string>
    <string name="add_new_pet">Add New Pet</string>
    <string name="options">Options</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="pet_type">What kind of pet do you have?</string>
    <string name="pet_name_prompt">Pet Name</string>
    <string name="the">the</string>
    <string name="change_picture">Change Picture</string>
    <string name="message">Message</string>
    <string name="your_pets">Your Pets</string>
    <string name="set_active">Set Active</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_pet">Change Pet</string>
    <string name="select_pet">Select Pet</string>
    <string name="confirm">Confirm</string>
    <string name="pet">Pet</string>

    <string-array name="pet_type_array">
        <item>[Select One]</item>
        <item>Dog</item>
        <item>Cat</item>
        <item>Fish</item>
        <item>Turtle</item>
        <item>Guinea Pig</item>
        <item>Bird</item>
        <item>Rabbit</item>
        <item>Lizard</item>
        <item>Horse</item>
        <item>Iguana</item>
        <item>Ferret</item>
        <item>Hamster</item>
        <item>Rock</item>
    </string-array>
</resources>
